--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=sqlsrv
-DB_HOST=127.0.0.1
+DB_HOST=190.4.56.14
 DB_PORT=1433
 DB_DATABASE=XploreDesa
-DB_USERNAME=sa
-DB_PASSWORD=sapassword
+DB_USERNAME=usrmelvin
+DB_PASSWORD=UsrMelvin20$
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
