--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+.idea/misc.xml
+.idea/modules.xml
+.idea/php.xml
+.idea/vcs.xml
+.idea/XploreDeliveryAPI.iml
