--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /node_modules
 /public/hot
 /public/storage
+/public/web.config
 /storage/*.key
 /vendor
 .env.backup
@@ -15,3 +16,4 @@ yarn-error.log
 .idea/php.xml
 .idea/vcs.xml
 .idea/XploreDeliveryAPI.iml
+.idea
